workshop04/minio-config.yaml
---
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns
