workshop04/minio-sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-ns
spec:
  clusterIP: None # Headless service
  selector:
    app: minio
  ports:
    - name: minio
      port: 9000
      targetPort: 9000
    - name: minio-console
      port: 9090
      targetPort: 9090

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minio-ns
spec:
  serviceName: minio-svc
  replicas: 4
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: minio
          image: bitnami/minio:2024.8.29
          # args:
          #   - server
          #   - --address=:$(MINIO_API_PORT_NUMBER)
          #   - --console-address=:$(MINIO_CONSOLE_PORT_NUMBER)
          #   - $(MINIO_DISTRIBUTED_NODES)
          resources:
            limits:
              cpu: "200m"
              memory: "250Mi"
          ports:
            - name: minio
              containerPort: 9000 # MinIO API port
            - name: minio-console
              containerPort: 9090 # MinIO Console port
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi # Adjust storage size as needed
